--- a/Structural Geology.html
+++ b/Structural Geology.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=style, initial-scale=1.0">
-    <title>Document</title>
+    <title>Structural Geology</title>
+    <link rel="stylesheet" href="onew.css">
 </head>
 <body>
-    <STyle></STyle>
+     <div class="box0001">
+        <h1>ธรณีโครงสร้าง Structural Geology </h1>
+    </div>
+    
+    <div class="box0002">
+        <a href="index.html" class="no-underline">หน้าแรก</a>
+    </div>
+    <div class="b23">
+    </div>
 </body>
 </html>
