--- a/geology.html
+++ b/geology.html
@@ -12,7 +12,7 @@
     </div>
     
     <div class="box0002">
-        <a href="earth science.html" class="no-underline">หน้าแรก</a>
+        <a href="index.html" class="no-underline">หน้าแรก</a>
     </div>
     <div class="b23">
     </div>
@@ -24,8 +24,8 @@
         <h1>
             <a href="Structural Geology.html" class="no-underline">ธรณีโครงสร้าง Structural Geology</a>
         </h1>
-        <p>
-            คือสาขาหนึ่งของธรณีวิทยาที่ศึกษาเกี่ยวกับ รูปร่าง การจัดเรียง และการเปลี่ยนแปลงของหินและชั้นหิน ภายใต้แรงและความเครียดที่เกิดขึ้นในเปลือกโลก
+        <p style="font-family:th sarabun new ;size: 20px;">
+            คือสาขาหนึ่งของธรณีวิทยาที่ศึกษาเกี่ยวกับ รูปร่าง การจัดเรียง และการเปลี่ยนแปลงของหินและชั้นหิน ภายใต้แรงและความเครียดที่เกิดขึ้นในเปลือกโลก ภาพจากThibault Cavailhes
         </p>
     </div>
 </div>
