--- a/Structural Geology.html
+++ b/Structural Geology.html
@@ -16,5 +16,27 @@
     </div>
     <div class="b23">
     </div>
+    <figure>
+<div class="image-box">
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEh0_3vW-_SLkk15buSnVHEE2mSfk0BnfiS5jWSwkqRgbUQiu-1jmTs0NV75zH3iqsI74VlzaI1g59i369JVl-hkDtpc5zewH2F0tZx0jN8hnRlU_MeAgNmkaANeKosE7DnUNwX8SzdkAP5A/s1600/Folded+Carbonates+flysch%252C+France.jpg" 
+       alt="Folded Carbonates flysch, France">
+  <p class="credit">Nik on Flickr</p>
+</div>
+
+
+ <h1 class="m1">
+    ความเค้น(stress)ความเครียด(strain)
+    <div class="gbc">
+    <p class="o3">
+        ความเค้น คือ แรงที่กระทต่อหนึ่งหน่วยพื้นที่วัตถุ เหมือนหินที่ได้รับแรงดันจาดทุกทิศทาง มีหน่วยเป็น ปาสคาล(pa) โดยสามารถแบ่ง 3 ประเภท   <br>     
+        &emsp;&emsp;&emsp;&emsp;ความเค้นอัด(Compressional stress) เป็นแรงที่ทำให้หินหด บีบเข้า มักเกิดมากบริเวณเทคโทนิกแบบชนกัน <br>
+        <div class="rt"><img src="https://mhshonorsenvr.weebly.com/uploads/1/3/4/1/13416460/5643474_orig.png" alt=""></div><br>
+        &emsp;&emsp;&emsp;&emsp; ความเค้นดึง
+
+      
+    </p>
+    
+  </div>
+ </h1>   
 </body>
 </html>
