--- a/geology.html
+++ b/geology.html
@@ -30,8 +30,20 @@
     </div>
 </div>
 
-      <div class="h"></div>
-       <div class="d"></div>
+      <div class="h">
+    <img class="img77" src="Lagardette.jpg" alt="">
+    <h1>
+     <a href="mineral.html" class="no-underline">แร่ Mineral</a>
+    </h1>
+      </div>
+       
+      <div class="d">
+        <img class="img77" src="Rock_Outcrop_near_Claerwen_Dam_-_geograph.org.uk_-_2871817.jpg" alt="">
+        <h1>
+          <a href="rock.html" class="no-underline">หิน Rock</a>
+        </h1>
+
+       </div>
     </div>
 
     
