--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 
     <div class="box0001">
-        <h1>วิทยาศาสตร์โลกและอวกาศ Earth Science </h1>
-    
-    </div>
-    
-    <div class="box0002">
-        <a href="geology.html" class="no-underline">ธรณีวิทยา </a>
-        <a href="Meteorology.html" class="no-underline">อุตุนิยมวิทยา </a>
-    </div>
+    <h1>วิทยาศาสตร์โลกและอวกาศ Earth Science</h1>
+</div>
+
+<div class="box0002">
+    <a href="geology.html" class="menu-link">ธรณีวิทยา</a>
+    <a href="Meteorology.html" class="menu-link">อุตุนิยมวิทยา</a>
+    <a href="astronomy.html" class="menu-link">ดาราศาสตร์</a>
+</div>
 
 </body>
 </html>
