--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <a href="Meteorology.html" class="menu-link">อุตุนิยมวิทยา</a>
     <a href="astronomy.html" class="menu-link">ดาราศาสตร์</a>
 </div>
-
+<div class="wow007">
+  <div class="wow0078">
+    <a href="geology.html"><img src="Lower_Antelope_Canyon_November_2018_017.png" alt=""></a>
+  </div>
+  <div class="wow0079">
+    <a href="Meteorology.html"><img src="Meteorology.png" alt=""></a>
+  </div>
+</div>
 </body>
 </html>
