--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 </div>
 <div class="wow007">
   <div class="wow0078">
-    <a href="geology.html"><img src="Lower_Antelope_Canyon_November_2018_017.png" alt=""></a>
+    <a href="geology.html"><img src="ge.png" alt=""></a>
   </div>
   <div class="wow0079">
-    <a href="Meteorology.html"><img src="Meteorology.png" alt=""></a>
+    <a href="Meteorology.html"><img src="me.png" alt=""></a>
   </div>
 </div>
 </body>
 </html>
-
